welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: forward reference extends over definition of value tab
	val tab = rassemblage();
                  ^